[metadata]
name = mixcloud-uploader
description = CLI tool for uploading Mixxx recordings to Mixcloud
url = https://github.com/fwcd/mixcloud-uploader
version = 0.0.1

[options]
packages = find:
install_requires =
  ffmpeg-python >= 0.2, < 1.0
  requests >= 2.28, < 3

[options.entry_points]
console_scripts =
  mixcloud-uploader = mixcloud_uploader:main
